<resources>
    <string name="app_name">Project_untappd_10_try</string>
    <string name="Create_account_btn">Create account</string>
    <string name="Birthday">Birthday</string>
    <string name="Country">Country</string>
    <string name="Email">Email</string>
    <string name="Allname">First and Last name</string>
    <string name="Create_account">Dont have an account? Sign up!</string>
    <string name="Add_photo">ADD PHOTO</string>
    <string name="Sign_in">SIGN IN</string>
    <string name="Forgot_ask">Forgot your password?</string>
    <string name="Label_photo">TODO</string>
    <string name="Project_untappd">PROJECT_UNTAPPD</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="Country_names">Абхазия, Австралия, Австрия, Азербайджан, Албания, Алжир, Ангола, Андорра, Антигуа, Аргентина, Армения, Афганистан, Бангладеш, Барбадос, Бахрейн, Белиз, Белоруссия, Бельгия, Бенин, Болгария, Боливия, Ботсвана, Бразилия, Бруней, Буркина-Фасо, Бурунди, Бутан, Вануату, Ватикан, Великобритания, Венгрия, Венесуэла, Вьетнам, Габон, Гаити, Гайана, Гамбия, Гана, Гватемала, Гвинея, Гвинея-Бисау, Германия, Гондурас, Государство, Палестина, Гренада, Греция, Грузия, Дания, Джибути, Доминика, Египет, Замбия, Зимбабве, Израиль, Индия, Индонезия, Иордания, Ирак, Иран, Ирландия, Исландия, Испания, Италия, Йемен, Кабо-Верде, Казахстан, Камбоджа, Камерун, Канада, Катар, Кения, Кипр, Киргизия, Кирибати, Китай, КНДР, Колумбия, Коста-Рика, Куба, Кувейт, Лаос, Латвия, Лесото, Либерия, Ливан, Ливия, Литва, Лихтенштейн, Люксембург, Маврикий, Мавритания, Мадагаскар, Малави, Малайзия, Мали, Мальта, Марокко, Мексика, Мозамбик, Молдавия, Монако, Монголия, Мьянма, Намибия, Науру, Непал, Нигер, Нигерия, Нидерланды, Никарагуа, Норвегия, ОАЭ, Оман, Пакистан, Палау, Панама, Парагвай, Перу, Польша, Португалия, Россия, Руанда, Румыния, Сальвадор, Самоа, Сан-Марино, Саудовская Аравия, Сенегал, Сент-Винсент, Сент-Китс, Сент-Люсия, Сербия, Сингапур, Сирия, Словакия, Словения, Сомали, Судан, Суринам, США, Сьерра-Леоне, Таджикистан, Таиланд, Танзания, Того, Тонга, Тувалу, Тунис, Туркмения, Турция, Уганда, Узбекистан, Украина, Уругвай, Фиджи, Филиппины, Финляндия, Франция, Хорватия, ЦАР, Чад, Черногория, Чехия, Чили, Швейцария, Швеция, Шри-Ланка, Эквадор, Эритрея, Эсватини, Эстония, Эфиопия, ЮАР, Ямайка, Япония</string>
</resources>