<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_icon"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/main_icon"
        android:contentDescription="@string/Label_photo"
        />

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_icon"
        android:fontFamily="@font/arial_font"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Project_untappd"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@id/label"
        android:hint="@string/Username"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="15dp"
        android:padding="20dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:background="@drawable/edit_frame"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/username"
        android:hint="@string/Password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:padding="20dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:background="@drawable/edit_frame"
        />

    <TextView
        android:id="@+id/forgot_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/arial_font"
        android:onClick="goReset"
        android:text="@string/Forgot_ask"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="UsingOnClickInXml"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_inbtn"
        android:layout_below="@id/forgot_ask"
        android:text= "@string/Sign_in"
        android:backgroundTint="@color/field_color1"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="40dp"
        android:paddingVertical="17dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/create_new"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/sign_inbtn"
        android:fontFamily="@font/arial_font"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/Create_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginHorizontal="15dp"
        android:onClick="goCreate"
        tools:ignore="UsingOnClickInXml" />

</RelativeLayout>