<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/main_photo"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/photo_beer"
        android:contentDescription="@string/Label_photo"
        android:maxHeight="110dp"
        android:minHeight="110dp"
        android:scaleType="centerCrop"
        />
    <TextView
        android:id="@+id/add_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_photo"
        android:fontFamily="@font/arial_font"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/Add_photo"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@id/add_photo"
        android:hint="@string/Username"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="15dp"
        android:padding="20dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:background="@drawable/edit_frame"
        android:textSize="18sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/All_name"
        android:layout_below="@id/username"
        android:hint="@string/Allname"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:padding="20dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:background="@drawable/edit_frame"
        android:textSize="18sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Email_adress"
        android:layout_below="@id/All_name"
        android:hint="@string/Email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:padding="20dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:background="@drawable/edit_frame"
        tools:ignore="TextFields"
        android:textSize="18sp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Password"
        android:layout_below="@id/Email_adress"
        android:hint="@string/Password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:padding="20dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_frame"
        android:textSize="18sp"
        android:longClickable="false"
        android:drawableEnd="@drawable/visible_off"
        android:importantForAutofill="no"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Country"
        android:layout_below="@id/Password"
        android:hint="@string/Country"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:padding="20dp"
        android:importantForAutofill="no"
        android:background="@drawable/edit_frame"
        tools:ignore="TextFields"
        android:textSize="18sp"
        app:drawableEndCompat="@drawable/vector" />
</RelativeLayout>